Add new features of User login with jwt token & Add column dir to Predict table for recording the image path.
