# domain/delivery/http/user_handler.go
@@ -3,6 +3,7 @@ package http
 import (
 	"go-pano/domain/model"
 	user_service "go-pano/domain/service/user"
+	"go-pano/middleware"
 	"go-pano/utils"
 
 	"github.com/gin-gonic/gin"
@@ -14,6 +15,7 @@ type IUserHandler interface {
 	Create(ctx *gin.Context)
 	Update(ctx *gin.Context)
 	UpdatePassword(ctx *gin.Context)
+	Login(ctx *gin.Context)
 	// TODO hard delete
 	// Delete(ctx *gin.Context)
 }
@@ -23,15 +25,16 @@ func NewUserHandler(e *gin.RouterGroup, s user_service.IUserService) {
 	handler := UserHandler{UserService: s}
 
 	// router
-	e.POST("/login", handler.UpdatePassword)
+	e.POST("/login", handler.Login)
 	user := e.Group("/user")
-	user.Use(utils.JWTAuthMiddleware())
+	user.Use(middleware.JWTAuthMiddleware())
 	// TODO RBAC
 	{
 		user.GET("", handler.Get)
 		user.POST("", handler.Create)
 		user.PUT("", handler.Update)
 		user.PATCH("/password", handler.UpdatePassword)
+		user.PATCH("/password/self", handler.UpdateSelfPassword)
 	}
 }
 
@@ -46,6 +49,7 @@ type UserHandler struct {
 // @version 1.0
 // @accept application/json
 // @produce application/json
+// @Security BearerAuth
 // @Success 200 {object} utils.IH200{data=[]model.User} "使用者"
 // @Failure 500 {object} utils.IH500
 // @Router /api/user [get]
@@ -65,6 +69,7 @@ func (uh *UserHandler) Get(ctx *gin.Context) {
 // @version 1.0
 // @accept application/json
 // @produce application/json
+// @Security BearerAuth
 // @param data body model.UserCreateForm true "body"
 // @Success 200 {object} utils.IH200
 // @Failure 500 {object} utils.IH500
@@ -92,6 +97,7 @@ func (uh *UserHandler) Create(ctx *gin.Context) {
 // @version 1.0
 // @accept application/json
 // @produce application/json
+// @Security BearerAuth
 // @param data body model.UserUpdateForm true "body"
 // @Success 200 {object} utils.IH200
 // @Failure 500 {object} utils.IH500
@@ -113,12 +119,13 @@ func (uh *UserHandler) Update(ctx *gin.Context) {
 	ctx.JSON(200, utils.H200(nil, "更新成功"))
 }
 
-// @Summary 更新使用者密碼
+// @Summary 更新其他使用者密碼
 // @Id 5
 // @Tags User
 // @version 1.0
 // @accept application/json
 // @produce application/json
+// @Security BearerAuth
 // @param data body model.UserPasswordForm true "body"
 // @Success 200 {object} utils.IH200
 // @Failure 500 {object} utils.IH500
@@ -137,4 +144,46 @@ func (uh *UserHandler) UpdatePassword(ctx *gin.Context) {
 	}
 
 	ctx.JSON(200, utils.H200(nil, "更新成功"))
+}
+
+// @Summary 更新自己的密碼
+// @Id 12
+// @Tags User
+// @version 1.0
+// @accept application/json
+// @produce application/json
+// @Security BearerAuth
+// @param data body model.UserPasswordForm true "body"
+// @Success 200 {object} utils.IH200
+// @Failure 500 {object} utils.IH500
+// @Router /api/user/password/self [patch]
+func (uh *UserHandler) UpdateSelfPassword(ctx *gin.Context) {
+	uh.UpdatePassword(ctx)
+}
+
+// @Summary 使用者登入
+// @Id 11
+// @Tags User
+// @version 1.0
+// @accept application/json
+// @produce application/json
+// @param data body model.UserLoginForm true "body"
+// @Success 200 {object} utils.IH200{data=model.UserToken}
+// @Failure 500 {object} utils.IH500
+// @Router /api/login [post]
+func (uh *UserHandler) Login(ctx *gin.Context) {
+	// 表單驗證
+	var userForm model.UserLoginForm
+	if err := ctx.ShouldBindJSON(&userForm); err != nil {
+		ctx.JSON(400, utils.H500(err.Error()))
+		return
+	}
+
+	token, err := uh.UserService.Login(&userForm)
+	if err != nil {
+		ctx.JSON(400, utils.H500(err.Error()))
+		return
+	}
+
+	ctx.JSON(200, utils.H200(model.UserToken{Token: token}, "登入成功"))
 }
